# Openai_Agents_SDK_Book_Writer

./: book_outline.md  pyproject.toml
book_outputs/: chapter.txt  chapter_20250405_164401.txt  outline.txt  outline_20250405_164401.txt
src/sdk_book_writer/: __init__.py  book_outline.py  cody_code.py  model.py  save_chapters.py  tool.py
